--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,10 +3,31 @@
   font-family: UbuntuCondensed;
 }
 
+@font-face {
+  font-family: "FiraCode";
+  src: url("../fonts/FiraCode.otf");
+}
+
+@font-face {
+  font-family: "FiraSans";
+  src: url("../fonts/FiraSans.ttf");
+}
+
+.text-fira-code {
+  font-family: "FiraCode", sans-serif;
+}
+
+.text-fira-sans {
+  font-family: "FiraSans", sans-serif;
+}
+
+
 body {
-  margin: 0;
-  padding: 0;
-  background: url("../images/background.jpg") no-repeat center center fixed;
+  height: 95vh;
+  background: linear-gradient(
+          rgba(0, 0, 0, 0.5),
+          rgba(0, 0, 0, 0.5)
+  ), url("../images/background.jpg") no-repeat fixed center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
