--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,9 +25,9 @@
 body {
   height: 95vh;
   background: linear-gradient(
-          rgba(0, 0, 0, 0.5),
-          rgba(0, 0, 0, 0.5)
-  ), url("../images/background.jpg") no-repeat fixed center center;
+          rgba(0, 0, 0, 0.6),
+          rgba(0, 0, 0, 0.6)
+  ), url("../images/main-background.jpg") no-repeat fixed center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
