--- a/src/css/index.css
+++ b/src/css/index.css
@@ -31,7 +31,7 @@ body {
   background: linear-gradient(
           rgba(0, 0, 0, 0.6),
           rgba(0, 0, 0, 0.6)
-  ), url("../images/main-background.jpg") no-repeat fixed center center;
+  ), url("../images/background.jpg") no-repeat fixed center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
